lab1/Test/L1-A-13-81.output
Error Type A at Line 4
Error Type A at Line 5
Error Type B at Line 11
Error Type B at Line 15
Error Type A at Line 17
Error Type A at Line 21
Error Type A at Line 23
Error Type B at Line 28
Error Type B at Line 30
Error Type B at Line 38
