lab1/Test/L1-A-13-81.cmm
int ;
int vAbRIVdq ( int DSWsd9iYWI , int vPpj1kvLgpOjsIp1 
  ) {
  if ( G )   if ( Rvp )   qcfvjjn ';
else   while ( bJV99P4jh_S3aA ~)   LR04Sq3UxGE8hbk 
    ;



  OcwtZQuG2 ;
<= }
int ;
struct I1S98r506EvuxGQkZ {
  int B4RJFy4nv_tpA_Hgp5cn ;
  struct HpwnJISAqopO2 L741LNjNwD ;/ 
  int I9dfuyAVfJs0L ;
  struct kKpxbJCj lFqP ;~
  struct {
  }bpuoE ;
  int fDR9Fpkts51vwVKhSt ;
^}gYdlrqgyTga3rhi1LU 
;
int Y65hPz ~, F 

;
float juLgvPDoZIsfGOzdmQ ( ) {
  if ( gCI ) {
    struct FmhZ while w7xI [ 1957561416 ] , ss9DbQON1S 
      = Afeg ;
+   }else   if ( hKLinLRbS )   return iIl82390Ca9 
    = BRX && uiK4PoYZVC4IBbu_Yey == v_h - JE7mdmbwuZU 
    * - mmKGAD [ g8k || z4Wl9PjNy <= CkiDh9 + ! ! MyvbSKEP38qRk3 
    ( SgJESL4XBimO4F5o || tLLYF12G < ! gp3W [ JvrlSIdBdoLE 
    || kQUvz4Jl4kZusYvy > a6i5O7d3bdWujTt8 / ( DU26Jqhf0L 
    = swnE = RPtz8w_81XCRUOsI9o && RwOeEP8keBZs8qi0mdmj 
    >= c / ( jTIQFIH || - - ! evA12paJ [ BKyMIg9RL = v1PY4H3nDa8 
    = zMPQAdGFvv6Eyu && GfZqP9 / ! ( x_mNudZnq != GdJ6oj4b0 
    + ( ( m || * ! ( D4LN * ( f && ( hN95GZfGS [ j1bB2LletlFgqIOedr 
    < nxpKWHbjEpfzT51LRjFL * - - ! - ( PVb || ARpmx - 
    bKAPxw3UNT / - ( ( rt_ahSIuNCW1G = lWIHR_pQRo != AvEfcEBngWm6 
    + h05IAHlYFoZ ( PcL6GZC5 , gtck78boIRTmtJobjM9 ) ) 
    . VPNfmuc1NzZOPR ) ) * viqfYKlC * K ] ) ) ) ) ) + 
    ! qgq8wsD1Dc2eHXx + aghA ) - Z8zcCAAgkbb5z + TD ] 
    ) ) || 1092803375.162961931 ] != ! ! FQenNjLXmd / 
    ! 571364503 / ! cOgt0x ( ) . JQpm ) ] ;


}
